crud + swagger Especialidades
