# app/Models/Especialidade.php
@@ -8,4 +8,5 @@ use Illuminate\Database\Eloquent\Model;
 class Especialidade extends Model
 {
     use HasFactory;
+    protected $fillable = ['espec_nome'];
 }
